--- a/nanpin/index.html
+++ b/nanpin/index.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="js/common.js"></script>
 		<script type="text/javascript" src="js/angular.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript" src="js/application.js"></script>
 	</body>
 
 </html>
