--- a/nanpin/page2.html
+++ b/nanpin/page2.html
@@ -25,6 +25,7 @@
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/common.js"></script>
 		<script type="text/javascript" src="js/page2.js"></script>
+		<script type="text/javascript" src="js/application.js"></script>
 	</body>
 
 </html>
