--- a/nanpin/page3.html
+++ b/nanpin/page3.html
@@ -50,6 +50,7 @@
 		<script type="text/javascript" src="js/common.js"></script>
 		<script type="text/javascript" src="js/angular.js"></script>
 		<script type="text/javascript" src="js/page3.js"></script>
+		<script type="text/javascript" src="js/application.js"></script>
 	</body>
 
 </html>
