隐藏三级页面的副标题

--- a/nanpin/page3.html
+++ b/nanpin/page3.html
@@ -30,7 +30,7 @@
 					</td>
 					<td>
 						<div class="title">
-							<span>标题</span>
+							<span class="ellipsis">标题</span>
 							<small>2015-01-19 16:44:21</small>
 						</div>
 						<div class="content">
