--- a/nanpin/index.html
+++ b/nanpin/index.html
@@ -11,6 +11,14 @@
 	</head>
 
 	<body>
+		<div class="frame" style="display: none;">
+			<div>
+				<a href="javascript:;" class="close" ></a>
+			</div>
+			<div>
+				<iframe src="http://localhost/login.html"></iframe>
+			</div>
+		</div>
 		<div style="width: 100%;" id="nav">
 			<nav>
 				<ul am-repeat="info.menus">
