--- a/nanpin/page3.html
+++ b/nanpin/page3.html
@@ -29,6 +29,9 @@
 						<img class="logo" />
 						<img class="logo" style="display: none;" />
 						<img class="logo" style="display: none;" />
+						<span class="logotitle" style="display: none;"></span>
+						<span class="logotitle" style="display: none;"></span>
+						
 					</td>
 					<td>
 						<div class="title">
