--- a/nanpin/index.html
+++ b/nanpin/index.html
@@ -16,7 +16,7 @@
 				<a href="javascript:;" class="close" ></a>
 			</div>
 			<div>
-				<iframe src="http://localhost/login.html"></iframe>
+				<iframe src="http://www.zhuhaijiaoyu.com/dy/index.php/login/loginin.html"></iframe>
 			</div>
 		</div>
 		<div style="width: 100%;" id="nav">
